@@ -1,14 +1,15 @@
 plugins {
-    id 'org.springframework.boot' version '2.3.5.RELEASE'
+    /* https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.4-Release-Notes */
+    id 'org.springframework.boot' version '2.4.0'
     id 'io.spring.dependency-management' version '1.0.10.RELEASE'
     id 'java'
     id 'org.hidetake.swagger.generator' version '2.18.2'
-
 }
+
 
 group = 'com.ecomm.api.backend'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = "15"
+sourceCompatibility = JavaVersion.VERSION_15
 
 swaggerSources {
     def typeMappings = 'URI=URI, BigDecimal=BigDecimal, EntityModel=EntityModel'
@@ -24,7 +25,6 @@ swaggerSources {
             rawOptions = ['--ignore-file-override', ignoreFile, '--type-mappings',
                           typeMappings, '--import-mappings', importMappings] as List<String>
             components = [models: true, apis: true, supportingFiles: 'ApiUtil.java']
-            //templateDir = file("${rootDir}/src/main/resources/templates")
             //dependsOn validation // Should be uncommented once plugin starts supporting OA 3 validation
         }
     }
@@ -39,13 +39,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.projectlombok:lombok:1.18.22'
-    implementation 'junit:junit:4.13.2'
-    implementation 'org.springframework:spring-test:5.3.18'
-    implementation 'net.anthavio.maven:spring-framework-bom:4.1.7.RELEASE'
-    implementation 'mysql:mysql-connector-java:8.0.28'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
-    compileOnly 'commons-lang:commons-lang:2.3'
     // OpenAPI Starts
     swaggerCodegen 'org.openapitools:openapi-generator-cli:4.3.1'
     compileOnly 'io.swagger:swagger-annotations:1.6.2'
@@ -55,25 +50,33 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-hateoas'
     // OpenAPI Ends
 
-    //DB starts
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'com.googlecode.flyway:flyway-core:2.3.1'
+    // DB Starts
+    implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
+    implementation 'com.h2database:h2'
+    runtimeOnly 'io.r2dbc:r2dbc-h2'
+    // DB Ends
 
-    runtimeOnly 'com.h2database:h2'
-    // DB ends
-    compileOnly group: 'io.springfox', name: 'springfox-swagger2', version: '2.7.0'
-    compileOnly  group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    // Flyway: Start
+    implementation 'org.flywaydb:flyway-core'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    // Flyway: End
 
-    testImplementation('org.springframework.boot:spring-boot-starter-test') /*{
-    exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-  }*/
+
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    // implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
+    testImplementation 'io.projectreactor:reactor-test'
 }
 
+configurations.all {
+    resolutionStrategy.dependencySubstitution.all { dependency ->
+        if (dependency.requested instanceof ModuleComponentSelector && dependency.requested.module == 'spring-boot-starter-reactor-netty') {
+            dependency.useTarget("org.springframework.boot:spring-boot-starter-tomcat:$dependency.requested.version", 'Use Undertow instead of Reactor Netty')
+        }
+    }
+}
 
 test {
-    jvmArgs '--enable-preview'
     useJUnitPlatform()
 }
-
-targetCompatibility = JavaVersion.VERSION_15
